# slam_bringup

./: .gitignore  CLAUDE.md  PLAN.md  README.md  TEST_PLAN.md  build.sh  install.sh  kill_d435.sh  kill_explore.sh  kill_explore_2d.sh  kill_fast_lio.sh  kill_helpers.sh  kill_mid360.sh  kill_nav.sh  kill_nav_2d.sh  kill_rtabmap.sh  kill_sensors.sh  kill_slam.sh  kill_slam_2d.sh  kill_viz_clip.sh  kill_witmotion.sh  kill_yahboom.sh  package.xml  setup.py  start_bench_tf.sh  start_d435.sh  start_explore.sh  start_explore_2d.sh  start_fast_lio.sh  start_foxglove.sh  start_helpers.sh  start_mid360.sh  start_nav.sh  start_nav_2d.sh  start_perception.sh  start_rtabmap.sh  start_sensors.sh  start_slam.sh  start_slam_2d.sh  start_viz_clip.sh  (+2 more)
cad/: 25d_bracket_2040_adapter.3mf  25d_bracket_2040_adapter.dxf  Go2_AC1.stl  Go2_Rear_Tilt_Base.dxf  Go2_Tilt_Adapter_Mid360.dxf  Go2_Tilt_Adapter_Pandar40.dxf  Go2_Tilt_Adapter_VLP16.dxf  Karlz Livox Mount plate.stl  Karlz Livox cage.stl  Livox_Mid360_Mounting_Plate.3mf  Livox_Mid360_Mounting_Plate.dxf  Pandar40_Mounting_Plate.dxf  RealSense435iMount.3mf  Universal_LiDAR_Mounting_Plate.dxf  Universal_mounting_plate_with_imu.3mf  VLP16 and Pandar40P with Imu Mounting Plate.3mf  XT60 Power Distribution Board 2020.3mf  XT60 Power Distribution Board 2020_thick.3mf  d42v110f12_2020_mount.3mf  d42v110f12_2020_mount.dxf  generate_25d_bracket_2040_adapter.py  generate_d42v110f12_mount.py  generate_waveshare_usb_hub_mount.py  make_livox_mid360_plate.py  make_universal_lidar_plate.py  waveshare_usb_hub_2040_mount.3mf  waveshare_usb_hub_2040_mount.dxf  (+1 more)
(+78 files in other folders)
