<?xml version="1.0"?>
<package format="3">
  <name>slam_bringup</name>
  <version>0.1.0</version>
  <description>Portable sensor-rig SLAM stack (Mid-360 + D435 + WitMotion) for multiple mobile platforms</description>
  <maintainer email="rico@makeorcode.com">rico</maintainer>
  <license>MIT</license>

  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>witmotion_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
